moved object should not have a shape ID

fix [Bug #19917]